1. 调试对象流的替换。